tests/testcases/errors/BCE0133-1.boo
"""
BCE0133-1.boo(4,5): BCE0133: Invalid signature for Main. It should be one of: 'Main() as void', 'Main() as int', 'Main(argv as (string)) as void', 'Main(argv as (string)) as int'.
"""
def Main(i as int):
	pass
